...

                      const SizedBox(height: 38),

                      /// TRAVELLER
                      SignupOptionTile(
                        image: 'assets/traveller.png',
                        title: 'Sign up as Traveller',
                        onTap: () {
                          Navigator.push(
                            context,
                            CustomPageRoute(child: const TravellerSignupScreen()),
                          );
                        },
...
